# bootstrap

./: LICENSE  README.md
linux/: .alias  .bashrc  .gitconfig  .p10k.zsh  .zshrc  Brewfile  README.md  bootstrap-debian.sh  bootstrap-macos.sh  bootstrap-raspbian.sh  bootstrap-ubuntu.sh  bootstrap.sh  logging.sh
vscode/: user.settings.json
vscode/.devcontainer/: py.Dockerfile  py.devcontainer.json  pyproject.toml
windows/: README.md  bootstrap-base.ps1  bootstrap-msft.ps1  windows-terminal-settings.json
