[tool.poetry]
name = "placeholder"
version = "0.1.0"
description = ""
authors = ["Ka Wo Fong <14829553+kawo123@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
mypy = "^1.1.1"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
